linking tables add style

--- a/src/Travel-Blog/Views/Home/Index.cshtml
+++ b/src/Travel-Blog/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>World Travel Blog</title>
+    <link rel="stylesheet" type="text/css" href="~/css/DemoStyle.css" />
+
 </head>
 <body>
     <h2>Welcome to the World Travel Blog!</h2>
