--- a/src/Travel-Blog/Views/Locations/Delete.cshtml
+++ b/src/Travel-Blog/Views/Locations/Delete.cshtml
@@ -1,11 +1,10 @@
 ﻿@model Travel_Blog.Models.Location
 
-<html>
-<head>
-    <title>Travel Blog- Delete</title>
-</head>
-<body>
+@{
+    ViewData["Title"] = "World Travel Blog";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 
+}
     <h2>Are you sure you want to delete this?</h2>
     <hr />
     @Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
@@ -14,5 +13,3 @@
         <input type="submit" value="Delete" />
     }
     @Html.ActionLink("Back to List", "Index")
-</body>
-</html>
